--- a/index.html
+++ b/index.html
@@ -69,9 +69,11 @@
             if (xhr.status === 200) {
               let json = JSON.parse(xhr.responseText);
               document.getElementById("temp").innerHTML =
-                json.main.temp.toFixed(0) + " F";
+                json.main.temp.toFixed(0) + "度C"; //here could be modify language by your self.
               document.getElementById("weather-description").innerHTML =
                 json.weather[0].description;
+              document.getElementById("weather-place").innerHTML =
+                json.name + "," + json.sys.country; // Added a place filed for display.
             } else {
               console.log("error msg: " + xhr.status);
             }
